dataGrid: fixed loading CSS to prevent page flicker.

--- a/rhodecode/public/css/navigation.less
+++ b/rhodecode/public/css/navigation.less
@@ -558,6 +558,8 @@ ul#context-pages {
 .dataTables_processing {
     text-align: center;
     font-size: 1.1em;
+    position: relative;
+    top: 95px;
 }
 
 .dataTables_paginate, .pagination-wh {
